quick code update